--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,4 +4,10 @@
             <directory>./test</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
