Initial Application implementation
- Allows creating and attaching routes via `route()`.
- Allows passing a `Route` instance to `route()`.
- Provides method overloading for common HTTP verbs, which proxies to
  `route()`.
- Prevents duplicate route + HTTP verb combinations.
- Injects the dispatcher only after the first route is added.
- Injects the router composed in the dispatcher when `__invoke()` is
  called.

Potential issues:

- If configuration-based routes are used, and `route()` is never
  invoked, the dispatcher middleware will not be injected.

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,15 @@
         "psr",
         "psr-7"
     ],
+    "repositories": [
+      {
+        "type": "vcs",
+        "url": "https://github.com/ezimuel/zend-stratigility-dispatch.git"
+      }
+    ],
     "require": {
         "zendframework/zend-stratigility": "^1.1",
+        "zendframework/zend-stratigility-dispatch": "dev-master@dev",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
