Refactored zend-stratigility-dispatch classes
- Gave them the new namespace (`Zend\Expressive`)
- Popped the `Dispatch` namespace.
- Removed `(set|get)Config()` from `RouterInterface` and added
  `addRoute(Route)`.
- Updated `Application::__invoke()` to use `array_walk` + `addRoute` to
  inject routes into router.
- Modified Dispatcher to pull router and container via methods in
  `__invoke()` instead of direct property usage; makes mocking simpler.

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "zendframework/zend-stratigility": "^1.1",
-        "zendframework/zend-stratigility-dispatch": "dev-master@dev",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
         "zendframework/zend-diactoros": "^1.1",
