--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require-dev": {
         "zendframework/zend-diactoros": "^1.1",
         "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "nikic/fast-route": "^0.6.0"
     },
     "autoload": {
       "psr-4": {
@@ -34,5 +35,8 @@
       "psr-4": {
         "ZendTest\\Expressive\\": "test/"
       }
+    },
+    "suggest": {
+        "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter"
     }
 }
