--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "zendframework/zend-diactoros": "^1.1",
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3",
-        "nikic/fast-route": "^0.6.0"
+        "nikic/fast-route": "^0.6.0",
+        "aura/router": "^2.3"
     },
     "autoload": {
       "psr-4": {
@@ -37,6 +38,7 @@
       }
     },
     "suggest": {
+        "aura/router": "^2.3 to use the AuraRoute routing adapter",
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter"
     }
 }
