--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "require-dev": {
         "nikic/fast-route": "^0.6.0",
         "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "zendframework/zend-mvc": "^2.5",
+        "zendframework/zend-psr7bridge": "^0.1.0"
     },
     "autoload": {
       "psr-4": {
@@ -34,6 +36,8 @@
       }
     },
     "suggest": {
-        "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter"
+        "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
+        "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
+        "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter"
     }
 }
