--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,6 @@
     "suggest": {
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
-        "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter"
+        "zendframework/zend-psr7bridge": "^0.1.0 to convert psr-7 messages to zend-http messages"
     }
 }
