--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=5.5",
         "aura/router": "^2.3",
+        "league/plates": "^3.1",
         "container-interop/container-interop": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
@@ -20,6 +21,7 @@
     },
     "require-dev": {
         "nikic/fast-route": "^0.6.0",
+        "twig/twig": "^1.19",
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3",
         "zendframework/zend-mvc": "^2.5",
@@ -38,6 +40,7 @@
     "suggest": {
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
-        "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter"
+        "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter",
+        "twig/twig": "^1.19 to use the Twig template adapter"
     }
 }
