--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
     "require": {
         "php": ">=5.5",
         "aura/router": "^2.3",
-        "league/plates": "^3.1",
         "container-interop/container-interop": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
@@ -20,6 +19,7 @@
         "zendframework/zend-stratigility": "^1.1"
     },
     "require-dev": {
+        "league/plates": "^3.1",
         "nikic/fast-route": "^0.6.0",
         "twig/twig": "^1.19",
         "phpunit/phpunit": "^4.7",
@@ -38,6 +38,7 @@
       }
     },
     "suggest": {
+        "league/plates": "^3.1 to use the Plates template adapter",
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
         "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter",
