--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "zendframework/zend-view": "^2.5",
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3",
+        "zendframework/zend-config": "^2.5",
+        "zendframework/zend-modulemanager": "^2.5",
         "zendframework/zend-mvc": "^2.5",
         "zendframework/zend-psr7bridge": "^0.1.0"
     },
@@ -44,6 +46,8 @@
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
         "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter",
+        "zendframework/zend-config": "^2.5 to enable support for ZF2 modules",
+        "zendframework/zend-modulemanager": "^2.5 to enable support for ZF2 modules",
         "twig/twig": "^1.19 to use the Twig template adapter",
         "zendframework/zend-view": "^2.5 to use the Zend View template adapter"
     }
