Working mkdocs configuration
- At least, locally.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,17 +3,19 @@ site_description: Expressive middleware applications in PHP
 
 repo_url: https://github.com/zendframework/zend-expressive
 
-docs_dir: doc
-# site_dir: doc/html
+docs_dir: doc/book
+site_dir: doc/html
 
 pages:
-- book/intro.md
-- book/install.md
-- book/usage-examples.md
-- book/router.aura.md
-- book/router.fast-route.md
-- book/router.zf2.md
-- book/error-handling.md
-- book/cookbook.md
+- 'index.md'
+- 'Intro': 'intro.md'
+- 'Installation': 'install.md'
+- 'Examples': 'usage-examples.md'
+- 'Routing Adapters':
+    - 'Aura': 'router/aura.md'
+    - 'FastRoute': 'router/fast-route.md'
+    - 'ZF2': 'router/zf2.md'
+- 'Error Handling': 'error-handling.md'
+- 'Cookbook': 'cookbook.md'
 
 copyright: Copyright (c) 2015 <a href="http://www.zend.com">Zend Technologies USA Inc.</a>
