Better travis workflow
- Added composer caching
- use before_install to update composer and add the bookdown2mkdocs dep
- use install to do the actual `composer install` (wrapping it in a
  travis_retry); report what was installed on completion (since caching may
  remove the need to install anything)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 
 language: php
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+    - vendor
+
 matrix:
   fast_finish: true
   include:
@@ -17,10 +22,15 @@ matrix:
     - php: 7
     - php: hhvm
 
-before_script:
+before_install:
   - composer self-update
-  - composer install --prefer-source
-  - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then composer require --no-update phly/bookdown2mkdocs ; fi
+  - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then composer require --dev --no-update phly/bookdown2mkdocs ; fi
+
+install:
+  - travis_retry composer install --no-interaction --ignore-platform-reqs --prefer-source
+  - composer info -i
+
+before_script:
   - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then cp mkdocs.yml mkdocs.yml.orig ; fi
 
 script:
