--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_dir: doc/html
 pages:
     - index.md
     - { Examples: usage-examples.md }
-    - { 'Routing Adapters': [{ Aura: router/aura.md }, { FastRoute: router/fast-route.md }, { ZF2: router/zf2.md }] }
+    - { 'Routing Adapters': [{ Aura: router/aura.md }, { FastRoute: router/fast-route.md }, { ZF2: router/zf2.md }, { 'URI Generation': router/uri-generation.md }] }
     - { 'Error Handling': error-handling.md }
     - { Cookbook: cookbook.md }
 site_name: zend-expressive
