--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,12 @@
+markdown_extensions:
+    - py-gfm
 docs_dir: doc/book
 site_dir: doc/html
 pages:
     - index.md
     - { Examples: usage-examples.md }
-    - { Containers: [{ Intro: container/intro.md }, { 'Container Factories': container/factories.md }, { 'Using zend-servicemanager': container/zend-servicemanager.md }, { 'Using Pimple': container/pimple.md }] }
-    - { 'Routing Adapters': [{ Aura: router/aura.md }, { FastRoute: router/fast-route.md }, { ZF2: router/zf2.md }, { 'URI Generation': router/uri-generation.md }] }
+    - { Containers: [{ Introduction: container/intro.md }, { 'Container Factories': container/factories.md }, { 'Using zend-servicemanager': container/zend-servicemanager.md }, { 'Using Pimple': container/pimple.md }] }
+    - { 'Routing Adapters': [{ Introduction: router/intro.md }, { 'Routing Interface': router/interface.md }, { 'URI Generation': router/uri-generation.md }, { 'Routing vs Piping': router/piping.md }, { 'Using Aura': router/aura.md }, { 'Using FastRoute': router/fast-route.md }, { 'Using the ZF2 Router': router/zf2.md }] }
     - { Templating: [{ Introduction: template/intro.md }, { 'Template Interface': template/interface.md }, { 'Templated Middleware': template/middleware.md }, { 'Using Plates': template/plates.md }, { 'Using Twig': template/twig.md }, { 'Using zend-view': template/zend-view.md }] }
     - { 'Error Handling': error-handling.md }
     - { Cookbook: cookbook.md }
