--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ docs_dir: doc/book
 site_dir: doc/html
 pages:
     - index.md
+    - { 'Quick Start': quick-start.md }
     - { Examples: usage-examples.md }
     - { Containers: [{ Introduction: container/intro.md }, { 'Container Factories': container/factories.md }, { 'Using zend-servicemanager': container/zend-servicemanager.md }, { 'Using Pimple': container/pimple.md }] }
     - { 'Routing Adapters': [{ Introduction: router/intro.md }, { 'Routing Interface': router/interface.md }, { 'URI Generation': router/uri-generation.md }, { 'Routing vs Piping': router/piping.md }, { 'Using Aura': router/aura.md }, { 'Using FastRoute': router/fast-route.md }, { 'Using the ZF2 Router': router/zf2.md }] }
