--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,23 @@
     ],
     "require": {
         "php": ">=5.5",
-        "aura/router": "^2.3",
         "container-interop/container-interop": "^1.1",
+        "filp/whoops": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
-        "zendframework/zend-servicemanager": "^2.6",
-        "zendframework/zend-stratigility": "^1.1",
-        "filp/whoops": "^1.1"
+        "zendframework/zend-stratigility": "^1.1"
     },
     "require-dev": {
+        "aura/router": "^2.3",
         "league/plates": "^3.1",
         "nikic/fast-route": "^0.6.0",
-        "twig/twig": "^1.19",
-        "zendframework/zend-view": "^2.5",
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3",
+        "twig/twig": "^1.19",
         "zendframework/zend-mvc": "^2.5",
-        "zendframework/zend-psr7bridge": "^0.1.0"
+        "zendframework/zend-psr7bridge": "^0.1.0",
+        "zendframework/zend-servicemanager": "^2.6",
+        "zendframework/zend-view": "^2.5"
     },
     "autoload": {
       "psr-4": {
@@ -40,11 +40,14 @@
       }
     },
     "suggest": {
+        "aura/router": "^2.3 to use the Aura.Router routing adapter",
         "league/plates": "^3.1 to use the Plates template adapter",
+        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
         "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter",
         "twig/twig": "^1.19 to use the Twig template adapter",
-        "zendframework/zend-view": "^2.5 to use the Zend View template adapter"
+        "zendframework/zend-servicemanager": "^2.5 to use zend-servicemanager for dependency injection",
+        "zendframework/zend-view": "^2.5 to use the zend-view template adapter"
     }
 }
