--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     "require": {
         "php": ">=5.5",
         "container-interop/container-interop": "^1.1",
-        "filp/whoops": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
         "zendframework/zend-stratigility": "^1.1"
     },
     "require-dev": {
         "aura/router": "^2.3",
+        "filp/whoops": "^1.1",
         "league/plates": "^3.1",
         "nikic/fast-route": "^0.6.0",
         "phpunit/phpunit": "^4.7",
@@ -41,6 +41,7 @@
     },
     "suggest": {
         "aura/router": "^2.3 to use the Aura.Router routing adapter",
+        "filp/whoops": "^1.1 to use the Whoops error handler",
         "league/plates": "^3.1 to use the Plates template adapter",
         "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
