--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "filp/whoops": "^1.1 to use the Whoops error handler",
         "league/plates": "^3.1 to use the Plates template adapter",
         "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
+        "aura/di": "3.0.*@beta to make use of Aura.Di dependency injection container",
         "nikic/fast-route": "^0.6.0 to use the FastRoute routing adapter",
         "zendframework/zend-mvc": "^2.5 to use the zend-mvc TreeRouteStack routing adapter",
         "zendframework/zend-psr7bridge": "^0.1.0 to use the zend-mvc TreeRouteStack routing adapter",
