Enable test coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ matrix:
   include:
     - php: 5.5
       env:
+        - EXECUTE_CS_CHECK=true
         - EXECUTE_DOC_CHECK=true
     - php: 5.6
       env:
-        - EXECUTE_CS_CHECK=true
+        - EXECUTE_TEST_COVERALLS=true
     - php: 7
     - php: hhvm 
   allow_failures:
@@ -23,8 +24,10 @@ matrix:
     - php: hhvm
 
 before_install:
+  - if [[ $EXECUTE_TEST_COVERALLS != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
   - composer self-update
   - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then composer require --dev --no-update phly/bookdown2mkdocs ; fi
+  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then composer require --dev --no-update satooshi/php-coveralls:dev-master ; fi
 
 install:
   - COMPOSER_ROOT_VERSION=0.4.1 travis_retry composer install --no-interaction --ignore-platform-reqs --prefer-source
@@ -34,9 +37,13 @@ before_script:
   - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then cp mkdocs.yml mkdocs.yml.orig ; fi
 
 script:
-  - ./vendor/bin/phpunit
+  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover clover.xml ; fi
+  - if [[ $EXECUTE_TEST_COVERALLS != 'true' ]]; then ./vendor/bin/phpunit ; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/phpcs ; fi
   - if [[ $EXECUTE_DOC_CHECK == 'true' ]]; then make mkdocs ; diff mkdocs.yml mkdocs.yml.orig ; return $? ; fi
+
+after_script:
+  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/coveralls ; fi
 
 notifications:
   email: true
