Removed Router and Template subcomponents
These are now shipped with the following packages:

- zendframework/zend-expressive-router
- zendframework/zend-expressive-template

This package now *depends* on those, and removes the code common between them.

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "container-interop/container-interop": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
+        "zendframework/zend-expressive-router": "^1.0",
+        "zendframework/zend-expressive-template": "^1.0.1",
         "zendframework/zend-stdlib": "^2.7",
         "zendframework/zend-stratigility": "^1.1"
     },
