--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
     },
     "suggest": {
         "filp/whoops": "^1.1 to use the Whoops error handler",
+        "zendframework/zend-expressive-helpers": "^1.0 for its UrlHelper, ServerUrlHelper, and BodyParseMiddleware",
         "zendframework/zend-expressive-aurarouter": "^1.0 to use the Aura.Router routing adapter",
         "zendframework/zend-expressive-fastroute": "^1.0 to use the FastRoute routing adapter",
         "zendframework/zend-expressive-zendrouter": "^1.0 to use the zend-mvc routing adapter",
