--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,7 @@ theme: readable
 pages:
     - index.md
     - { 'Overview and Features': features.md }
-    - { 'Quick Start: Skeleton + Installer': quick-start-skeleton.md }
-    - { 'Quick Start: Standalone': quick-start.md }
+    - { 'Quick Start': [{ Standalone: quick-start/standalone.md }, { 'Using the Skeleton Installer': quick-start/skeleton.md }] }
     - { Applications: application.md }
     - { Containers: [{ Introduction: container/intro.md }, { 'Container Factories': container/factories.md }, { 'Using zend-servicemanager': container/zend-servicemanager.md }, { 'Using Pimple': container/pimple.md }, { 'Using Aura.Di': container/aura-di.md }] }
     - { 'Routing Adapters': [{ Introduction: router/intro.md }, { 'Routing Interface': router/interface.md }, { 'URI Generation': router/uri-generation.md }, { 'Route Result Observers': router/result-observers.md }, { 'Routing vs Piping': router/piping.md }, { 'Using Aura': router/aura.md }, { 'Using FastRoute': router/fast-route.md }, { 'Using the ZF2 Router': router/zf2.md }] }
@@ -21,5 +20,3 @@ site_name: zend-expressive
 site_description: 'zend-expressive: PSR-7 Middleware Microframework'
 repo_url: 'https://github.com/zendframework/zend-expressive'
 copyright: 'Copyright (c) 2016 <a href="http://www.zend.com/">Zend Technologies USA Inc.</a>'
-markdown_extensions:
-    - pymdownx.superfences
