--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,21 +40,21 @@ pages:
         - Emitters: features/emitters.md
     - Reference:
         - Examples: reference/usage-examples.md
-        - Cookbook:
-            - 'Prepending a common path to all routes': reference/cookbook/common-prefix-for-routes.md
-            - 'Route-specific middleware pipelines': reference/cookbook/route-specific-pipeline.md
-            - 'Setting custom 404 page handling': reference/cookbook/custom-404-page-handling.md
-            - 'Registering custom view helpers when using zend-view': reference/cookbook/using-custom-view-helpers.md
-            - 'Using zend-form view helpers': reference/cookbook/using-zend-form-view-helpers.md
-            - 'Using Expressive from a subdirectory': reference/cookbook/using-a-base-path.md
-            - 'Building modular applications': reference/cookbook/modular-layout.md
-            - 'Setting a locale based on a routing parameter': reference/cookbook/setting-locale-depending-routing-parameter.md
-            - 'Setting a locale without a routing parameter': reference/cookbook/setting-locale-without-routing-parameter.md
-            - 'Enabling debug toolbars': reference/cookbook/debug-toolbars.md
-            - 'Handling multiple routes in a single class': reference/cookbook/using-routed-middleware-class-as-controller.md
         - 'Expressive Projects': reference/expressive-projects.md
-    - Migration:
-        - 'From RC5 and Earlier': migration/rc-to-v1.md
+        - Migration:
+            - 'From RC5 and Earlier': reference/migration/rc-to-v1.md
+    - Cookbook:
+        - 'Prepending a common path to all routes': cookbook/common-prefix-for-routes.md
+        - 'Route-specific middleware pipelines': cookbook/route-specific-pipeline.md
+        - 'Setting custom 404 page handling': cookbook/custom-404-page-handling.md
+        - 'Registering custom view helpers when using zend-view': cookbook/using-custom-view-helpers.md
+        - 'Using zend-form view helpers': cookbook/using-zend-form-view-helpers.md
+        - 'Using Expressive from a subdirectory': cookbook/using-a-base-path.md
+        - 'Building modular applications': cookbook/modular-layout.md
+        - 'Setting a locale based on a routing parameter': cookbook/setting-locale-depending-routing-parameter.md
+        - 'Setting a locale without a routing parameter': cookbook/setting-locale-without-routing-parameter.md
+        - 'Enabling debug toolbars': cookbook/debug-toolbars.md
+        - 'Handling multiple routes in a single class': cookbook/using-routed-middleware-class-as-controller.md
 site_name: zend-expressive
 site_description: 'zend-expressive: PSR-7 Middleware Microframework'
 repo_url: 'https://github.com/zendframework/zend-expressive'
