Edited and expanded flash messenger recipe
This patch updates the proposed documentation from @samsonasik as follows:

- Expands the narrative to detail what flash messages are, and what technologies
  they rely on.
- Adds documentation on setting up damess/expressive-session-middleware (makes
  it simpler for users to get started immediately).
- Documents that damess/expressive-session-middleware essentially just injects
  an Aura.Session instance into the request, and that it is the Aura.Session
  instance that provides the flash message functionality.
- Adds a section on using slim/flash as another alternative.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ pages:
         - 'Setting a locale without a routing parameter': cookbook/setting-locale-without-routing-parameter.md
         - 'Enabling debug toolbars': cookbook/debug-toolbars.md
         - 'Handling multiple routes in a single class': cookbook/using-routed-middleware-class-as-controller.md
+        - 'Flash Messengers': cookbook/flash-messengers.md
     - Reference:
         - Examples: reference/usage-examples.md
         - 'Expressive Projects': reference/expressive-projects.md
