--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         "cs": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit",
-        "test-coverage": "phpunit --coverage-clover clover.xml"
+        "test-coverage": "phpunit --coverage-clover clover.xml",
+        "license-check": "vendor/bin/docheader check src/"
     }
 }
