Intercept exceptions from the ServerRequest factory
As noted in zendframework/zend-diactoros#171, the
`ServerRequestFactory::fromGlobals()` method raises exceptions on
malformed information, such as:

- malformed file upload data
- invalid HTTP protocol versions

At the application level, we should catch these, and invoke the final
handler with a 400 response when caught.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "zendframework/zend-expressive-aurarouter": "^1.0",
         "zendframework/zend-expressive-fastroute": "^1.0",
         "zendframework/zend-expressive-zendrouter": "^1.0",
-        "zendframework/zend-servicemanager": "^2.6"
+        "zendframework/zend-servicemanager": "^2.6",
+        "mockery/mockery": "^0.9.5"
     },
     "autoload": {
       "psr-4": {
