Fix composer script - `upload-coverage`

--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
             "@cs-check",
             "@test"
         ],
-        "coveralls": "coveralls",
+        "upload-coverage": "coveralls -v",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit",
