--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "malukenho/docheader": "^0.1.5",
         "mockery/mockery": "^0.9.5",
         "phpunit/phpunit": "^4.7",
+        "sebastian/recursion-context": "1.0.0 - 1.0.2 || ^1.0.4",
         "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-expressive-aurarouter": "^1.0",
         "zendframework/zend-expressive-fastroute": "^1.0",
