--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "zendframework/zend-diactoros": "^1.1",
         "zendframework/zend-expressive-router": "^1.1",
         "zendframework/zend-expressive-template": "^1.0.1",
-        "zendframework/zend-stratigility": "^1.3.1"
+        "zendframework/zend-stratigility": "^1.3.1",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^1.1 || ^2.0",
