--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,8 @@ pages:
             - 'Using Twig': features/template/twig.md
             - 'Using zend-view': features/template/zend-view.md
         - 'Error Handling': features/error-handling.md
+        - Middleware:
+            - 'Implicit HEAD and OPTIONS Middleware': features/middleware/implicit-methods-middleware.md
         - Helpers:
             - Introduction: features/helpers/intro.md
             - UrlHelper: features/helpers/url-helper.md
