--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ pages:
         - Migration:
             - 'From RC5 and Earlier': reference/migration/rc-to-v1.md
             - 'From the 1.0 series to 1.1+': reference/migration/to-v1-1.md
+            - 'To the 2.0 series': reference/migration/to-v2.md
 site_name: Expressive
 site_description: 'zend-expressive: PSR-7 Middleware Microframework'
 repo_url: 'https://github.com/zendframework/zend-expressive'
