Add license check into `composer check` script

--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
     ],
     "scripts": {
         "check": [
+            "@license-check",
             "@cs-check",
             "@test"
         ],
