Ensure PHP 5.6 environments can install dependencies
Updates Travis configuration to add LEGACY_DEPS to each PHP 5.6 env,
asking to update to usable versions of phpunit/phpunit and
malukenho/docheader.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,23 @@ env:
   global:
     - COMPOSER_ARGS="--no-interaction"
     - COVERAGE_DEPS="satooshi/php-coveralls"
-    - LEGACY_DEPS="phpunit/phpunit"
 
 matrix:
   include:
     - php: 5.6
       env:
         - DEPS=lowest
+        - LEGACY_DEPS="phpunit/phpunit malukenho/docheader"
     - php: 5.6
       env:
         - DEPS=locked
+        - LEGACY_DEPS="phpunit/phpunit malukenho/docheader"
         - CS_CHECK=true
         - TEST_COVERAGE=true
     - php: 5.6
       env:
         - DEPS=latest
+        - LEGACY_DEPS="phpunit/phpunit malukenho/docheader"
     - php: 7
       env:
         - DEPS=lowest
@@ -61,7 +63,7 @@ before_install:
 
 install:
   - travis_retry composer install $COMPOSER_ARGS --ignore-platform-reqs
-  - if [[ $TRAVIS_PHP_VERSION =~ ^5.6 ]]; then travis_retry composer update $COMPOSER_ARGS --with-dependencies $LEGACY_DEPS ; fi
+  - if [[ $LEGACY_DEPS != '' ]]; then travis_retry composer update $COMPOSER_ARGS --with-dependencies $LEGACY_DEPS ; fi
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer update $COMPOSER_ARGS ; fi
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable $COMPOSER_ARGS ; fi
   - if [[ $TEST_COVERAGE == 'true' ]]; then travis_retry composer require --dev $COMPOSER_ARGS $COVERAGE_DEPS ; fi
