Use DispatchMiddleware and PathBasedRoutingMiddleware from zend-expressive-router v3
This patch updates zend-expressive to consume the `DispatchMiddleware`
and `PathBasedRoutingMiddleware` classes from zend-expressive-router
v3.0.0alpha1 and up. Doing so allows removal of those classes and
related tests from this package, but requires:

- `Application` now needs to depend on `PathBasedRoutingMiddleware`
- `ApplicationConfigInjectionDelegator` needs to use the new classes
  when injecting routing and dispatch middleware.
- tests needed updating to refer to the new classes.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
         "zendframework/zend-diactoros": "^1.3.10",
-        "zendframework/zend-expressive-router": "^3.0.0-dev",
+        "zendframework/zend-expressive-router": "^3.0.0alpha1",
         "zendframework/zend-expressive-template": "^2.0.0-dev",
         "zendframework/zend-stratigility": "^3.0.0alpha2"
     },
